# viscose-uploader

./: .gitignore  README.md  pyproject.toml  requirements-build.txt
packaging/: README_installer.md  viscose.iss  viscose.spec
viscose/: __init__.py  __main__.py  auth.py  cli.py  commands.py  gcloud_embed.py  update.py  version.py
viscose_uploader/: __init__.py  __main__.py  cli.py  colors.py  config.py  google_client.py  paths.py  state.py  stats.py  uploader.py
